Fixed spacing

--- a/src/components/IntroSection.css
+++ b/src/components/IntroSection.css
@@ -2,7 +2,7 @@
   padding: 6rem clamp(1rem, 6vw, 8rem);
   width: 100%;
   box-sizing: border-box;
-  margin-top: 25rem;
+  margin-top: 30rem;
   font-family: 'Inter', sans-serif;
   font-weight: 300;
   background-color: transparent;
