--- a/src/components/Projects.css
+++ b/src/components/Projects.css
@@ -10,7 +10,6 @@
   font-weight: 300;
   font-size: 2.25rem;
   margin: 0 0 1rem 0;
-  text-align: center;
 }
 
 .projects-divider {
